TestCases/Errors/threaded_movement/observations/win_08_obs.spm
 obs   15-6   0.000470926724683402 
 obs   15-7   0.00063950662806594 
 obs   3-11   0.0263541666666667 
 obs   5-11   0.00123456790123457 
 obs   3-12   0.0178571428571429 
 obs   5-13   0.00439628482972136 
 obs   4-14   0.0208333333333333 
 obs   5-14   0.0208333333333333 
 obs   4-15   0.03 
 obs   5-15   0.0161070740706525 
 obs   6-15   0.029010989010989 
 obs   5-16   0.0194642857142857 
 obs   6-16   0.0183015450768464 
 obs   7-16   0.0257929820619406 
 obs   8-17   0.023 
 obs   5-18   0.00333333333333333 
 obs   7-18   0.0155396389324961 
 obs   8-18   0.0163382626145784 
 obs   5-19   0.01 
 obs   7-19   0.0108333333333333 
 obs   8-19   0.0115270438569092 
 obs   9-19   0.012547619047619 
 obs   10-19   0.0139867724867725 
 obs   7-20   0.0108333333333333 
 obs   8-20   0.00922250594226762 
 obs   9-20   0.01 
 obs   10-20   0.00971212121212121 
 obs   8-21   0.00625 
 error_value   15-6   0 
 error_value   15-7   0 
 error_value   3-11   0 
 error_value   5-11   0 
 error_value   3-12   0 
 error_value   5-13   0 
 error_value   4-14   0 
 error_value   5-14   0 
 error_value   4-15   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   5-16   0 
 error_value   6-16   0 
 error_value   7-16   0 
 error_value   8-17   0 
 error_value   5-18   0 
 error_value   7-18   0 
 error_value   8-18   0 
 error_value   5-19   0 
 error_value   7-19   0 
 error_value   8-19   0 
 error_value   9-19   0 
 error_value   10-19   0 
 error_value   7-20   0 
 error_value   8-20   0 
 error_value   9-20   0 
 error_value   10-20   0 
 error_value   8-21   0 
